
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_11__ TYPE_5__ ;
typedef struct TYPE_10__ TYPE_4__ ;
typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int u32 ;
struct nvkm_subdev {struct nvkm_device* device; } ;
struct TYPE_10__ {TYPE_3__* client; } ;
struct nvkm_fifo_chan {TYPE_4__ object; TYPE_2__* inst; } ;
struct nvkm_device {scalar_t__ sw; } ;
struct TYPE_7__ {struct nvkm_subdev subdev; } ;
struct TYPE_11__ {TYPE_1__ engine; } ;
struct gk104_fifo {TYPE_5__ base; } ;
typedef int msg ;
struct TYPE_9__ {char* name; } ;
struct TYPE_8__ {int addr; } ;


 int gk104_fifo_pbdma_intr_0 ;
 int nvkm_error (struct nvkm_subdev*,char*,int,int,char*,int,int ,char*,int,int,int) ;
 struct nvkm_fifo_chan* nvkm_fifo_chan_chid (TYPE_5__*,int,unsigned long*) ;
 int nvkm_fifo_chan_put (TYPE_5__*,unsigned long,struct nvkm_fifo_chan**) ;
 int nvkm_rd32 (struct nvkm_device*,int) ;
 int nvkm_snprintbf (char*,int,int ,int) ;
 scalar_t__ nvkm_sw_mthd (scalar_t__,int,int,int,int) ;
 int nvkm_wr32 (struct nvkm_device*,int,int) ;

__attribute__((used)) static void
gk104_fifo_intr_pbdma_0(struct gk104_fifo *fifo, int unit)
{
 struct nvkm_subdev *subdev = &fifo->base.engine.subdev;
 struct nvkm_device *device = subdev->device;
 u32 mask = nvkm_rd32(device, 0x04010c + (unit * 0x2000));
 u32 stat = nvkm_rd32(device, 0x040108 + (unit * 0x2000)) & mask;
 u32 addr = nvkm_rd32(device, 0x0400c0 + (unit * 0x2000));
 u32 data = nvkm_rd32(device, 0x0400c4 + (unit * 0x2000));
 u32 chid = nvkm_rd32(device, 0x040120 + (unit * 0x2000)) & 0xfff;
 u32 subc = (addr & 0x00070000) >> 16;
 u32 mthd = (addr & 0x00003ffc);
 u32 show = stat;
 struct nvkm_fifo_chan *chan;
 unsigned long flags;
 char msg[128];

 if (stat & 0x00800000) {
  if (device->sw) {
   if (nvkm_sw_mthd(device->sw, chid, subc, mthd, data))
    show &= ~0x00800000;
  }
 }

 nvkm_wr32(device, 0x0400c0 + (unit * 0x2000), 0x80600008);

 if (show) {
  nvkm_snprintbf(msg, sizeof(msg), gk104_fifo_pbdma_intr_0, show);
  chan = nvkm_fifo_chan_chid(&fifo->base, chid, &flags);
  nvkm_error(subdev, "PBDMA%d: %08x [%s] ch %d [%010llx %s] "
       "subc %d mthd %04x data %08x\n",
      unit, show, msg, chid, chan ? chan->inst->addr : 0,
      chan ? chan->object.client->name : "unknown",
      subc, mthd, data);
  nvkm_fifo_chan_put(&fifo->base, flags, &chan);
 }

 nvkm_wr32(device, 0x040108 + (unit * 0x2000), stat);
}
